force-app/main/default/objects/Form_40_Approval__c/Form_40_Approval__c.object-meta.xml
<CustomObject>
    <label>Form 40 Approval</label>
    <nameField>
        <displayFormat>F40A-{000000}</displayFormat>
        <label>Form 40 Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form 40 Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>