force-app/main/default/objects/Form_40_Approval__c/fields/Attorney_or_Regional_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Attorney_or_Regional_Sign_Off__c</fullName>
    <label>Attorney or Regional Sign-Off</label>
    <type>Date</type>
</CustomField>