force-app/main/default/objects/Form_40_Approval__c/fields/Date_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Completion__c</fullName>
    <label>Date of Completion</label>
    <type>Date</type>
</CustomField>