force-app/main/default/objects/Form_40_Approval__c/fields/Senior_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Senior_Sign_Off__c</fullName>
    <label>Senior Sign-Off</label>
    <type>Date</type>
</CustomField>